--- a/decorator/decoratormytext.css
+++ b/decorator/decoratormytext.css
@@ -3,6 +3,7 @@ body {
 	font-size: 12pt;
 	margin-left: 20px;
 	margin-right: 20px;
+	/* background-image: url("../assets/images/new-100-dollar-bill-background-G19KCA.jpg"); */
 }
 
 #header {
