--- a/assets/css/signup.css
+++ b/assets/css/signup.css
@@ -6,7 +6,7 @@ fieldset {
    margin-top: 50px;
    width: 600px;
    padding: 10px;
-   background-color: #a8d7f2;
+   background-color: #CCCCFF;
    border-radius: 10px;
    /* color: white; */
 }
